added active states and transition for chart__bar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Charts</title>
-  <link href="../../../../../Downloads/charts-starter-code/css/main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
